<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/quiz_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="331dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingStart="50dp"
            android:text="@string/headig"
            android:textColor="#000000"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/candidate_name"
            android:textSize="21sp" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_field"
            android:inputType="textCapWords"
            android:paddingTop="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed"
            android:paddingTop="16dp"
            android:text="@string/instruction"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/question1"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question1_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/question1_choice1" />

            <RadioButton
                android:id="@+id/question1_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/question1_choice2" />

            <RadioButton
                android:id="@+id/question1_choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/question1_choice3" />
        </RadioGroup>

        <TextView
            android:id="@+id/question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question2_answer"
            android:paddingTop="16dp"
            android:text="@string/question2"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/question2_answer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/question3"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/question3_choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_choice1" />

        <CheckBox
            android:id="@+id/question3_choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_choice2" />

        <CheckBox
            android:id="@+id/question3_choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_choice3" />

        <CheckBox
            android:id="@+id/question3_choice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_choice4" />

        <TextView
            android:id="@+id/question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/question4"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question4_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4_choice1" />

            <RadioButton
                android:id="@+id/question4_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4_choice2" />

            <RadioButton
                android:id="@+id/question5_choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4_choice3" />
        </RadioGroup>

        <TextView
            android:id="@+id/question5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question4_answer"
            android:paddingTop="16dp"
            android:text="@string/question5"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/question5_answer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"
            android:paddingBottom="16dp" />

        <Button
            android:id="@+id/submit_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitAnswers"
            android:paddingTop="16dp"
            android:text="@string/submit_answers" />


    </LinearLayout>

</ScrollView>
